Fix dropdown layout on mobile

--- a/src/components/Layout/layout.module.scss
+++ b/src/components/Layout/layout.module.scss
@@ -1,13 +1,15 @@
 html,
 body {
 	height: initial;
+	font-size: 16px;
 }
 
 .wrapper {
+	position: relative;
+	z-index: 1;
 }
 
 .main {
-	position: relative;
 	margin-left: $sidebar-width;
 }
 
@@ -18,7 +20,7 @@ ul ul li {
 	}
 }
 
-@media (max-width: 850px) {
+@media (max-width: 992px) {
 	.wrapper {
 		flex-direction: column;
 	}
